# chobits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.py  model.py  stft.py
.github/workflows/: build.yml
chobits-cpp/: CMakeLists.txt  README.md
chobits-cpp/include/chobits/: video.hpp
cpp/: CMakeLists.txt
cpp/include/chobits/: audio.hpp  model.hpp
cpp/resources/: win.rc
cpp/src/: main.cpp
include/chobits/: chobits.hpp  media.hpp  model.hpp  nn.hpp  player.hpp
resources/: win.rc
src/: chobits.py  main.cpp  train.py
src/chobits/: chobits.cpp  media.cpp  model.cpp  player.cpp
test/: test_chobits.cpp  test_media.cpp  test_model.cpp
torch/: dataset.py  model.py  player.py  pth2onnx.py  pth2pt.py  requirements.txt  spec.py  test.py  trainer.py  val.py
